# conv

./: Cargo.toml  README.md  build.rs  justfile
src/: config.rs  conv.rs  font.rs  main.rs  ui.rs  utils.rs  whisper.rs
src/whisper/: mod.rs  whisper.rs
