[package]
name = "conv"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.15"
eframe = "0.30"
font-kit = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
nanoid = "0.4"
once_cell = "1"
image = "0.25"
anyhow = "1"
parking_lot = "0.12"
crossbeam = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
